--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /* Reset default margin/padding */
 * {
-    margin: 0;
+    margin: -2 px;
     padding: 0;
     box-sizing: border-box;
   }
@@ -12,17 +12,15 @@
     padding: 20px;
   }
   
-  /* Logo styling */
   .logo {
     position: relative;
-    right: 45%;
+    right: 40%;
     width: 150px;
     height: auto;
     display: block;
     margin: 0 auto 20px auto;
   }
   
-  /* Navigation styling */
   nav {
     background-color:#ffffff;
     border-radius: 12px;
@@ -34,17 +32,18 @@
   }
   
   nav ul {
+    font-size:5px;
     list-style: none;
     display: flex;
     justify-content: center;
-    gap: 40px;
+    gap: 38px;
   }
   
   nav ul li a {
-    text-decoration: none;
+    text-decoration:none  ;
     color: #333;
     font-weight: 500;
-    font-size: 16px;
+    font-size: 20px;
     transition: color 0.3s ease;
   }
   
@@ -54,7 +53,6 @@
   
   /* Main content */
   main {
-    text-align: center;
     padding: 40px 20px;
     background-color: white;
     border-radius: 16px;
@@ -182,8 +180,6 @@ button:hover {
 
 .project-list {
   list-style: none;
-  padding: 0;
-  margin: 0 auto;
   max-width: 600px;
   text-align: left;
   font-size: 1.05rem;
@@ -192,6 +188,9 @@ button:hover {
 .project-list li {
   margin-bottom: 10px;
   line-height: 1.6;
+}
+  .Future-project {
+  text-align: center;
 }
 .events-container {
   max-width: 800px;
@@ -243,7 +242,7 @@ button:hover {
 }
 /* About Section Styling */
 .about-section {
-  max-width: 900px;
+  max-width: 1000px;
   margin: auto;
   background: #fff;
   padding: 40px 30px;
@@ -257,43 +256,27 @@ button:hover {
   margin-bottom: 20px;
   text-align: center;
 }
+.about-section h2 {
+  font-size: 1.6  rem;
+  color: #2c3e50;
+  margin-top: 20px;
+  text-align: center;
+  margin-top: 5 0px;
+}
 
+.about-section div:hover {
+  background-color: #ebebeb;
+  transform: translateY(-2px);
+  border-radius: 10px;
+}
 .about-section p {
-  margin-bottom: 20px;
+  margin-bottom: 0px;
   font-size: 1.1rem;
 }
-
-.about-section strong {
-  color: #605c5c;
-}
-
-.about-section em {
-  color: #0984e3;
-  font-style: normal;
-}
-
-.about-section a {
-  color: #0984e3;
-  text-decoration: none;
-  font-weight: 500;
-}
-
-.about-section a:hover {
-  text-decoration: underline;
-}
-
-
 
 @media (max-width: 600px) {
   .about-section {
     padding: 30px 20px;
-  }
 
-  .about-section h1 {
-    font-size: 1.6rem;
-  }
-
-  .about-section p {
-    font-size: 1rem;
-  }
+}
 }
