--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
   }
   
   body {
-    font-family: 'Segoe UI', sans-serif;
+    font-family: Garamond;
     background-color: #f8f8f8;
     color: #333;
     padding: 20px;
@@ -36,7 +36,7 @@
     list-style: none;
     display: flex;
     justify-content: center;
-    gap: 38px;
+    gap: 30px;
   }
   
   nav ul li a {
@@ -241,39 +241,56 @@ button:hover {
   color: #333;
 }
 /* About Section Styling */
-.about-section {
-  max-width: 1000px;
+div h1 {
+  text-align: center;
+  font-size: 2.5em;
+  color: #333;
+  margin-bottom: 20px;
+}
+body {
+  font-family:  garamond;
+  font-size: 20px;
+  background: #f5f5f5;
+  margin: 0;
+  padding: 40px;
+}
+
+.container {
+  max-width: 900px;
   margin: auto;
   background: #fff;
-  padding: 40px 30px;
-  border-radius: 16px;
-  box-shadow: 0 10px 25px rgba(0, 0, 0, 0.1);
+  padding: 30px;
+  border-radius: 15px;
+ 
 }
 
-.about-section h1 {
-  font-size: 2rem;
-  color: #2c3e50;
+.section {
   margin-bottom: 20px;
-  text-align: center;
-}
-.about-section h2 {
-  font-size: 1.6  rem;
-  color: #2c3e50;
-  margin-top: 20px;
-  text-align: center;
-  margin-top: 5 0px;
-}
-
-.about-section div:hover {
-  background-color: #ebebeb;
-  transform: translateY(-2px);
+  padding: 20px;
   border-radius: 10px;
-}
-.about-section p {
-  margin-bottom: 0px;
-  font-size: 1.1rem;
+  background-color: #f9f9f9;
+  transition: background 0.4s;
 }
 
+.section:hover {
+  background-color: #e0e0e0;
+}
+
+h2 {
+  margin: 0;
+  color: #1a1a1a;
+  font-size: 1.6em;
+}
+
+.content {
+  margin-top: 10px;
+  color: #444;
+  font-size: 1em;
+}
+
+.content ul {
+  padding-left: 20px;
+}
 @media (max-width: 600px) {
   .about-section {
     padding: 30px 20px;
