--- a/style.css
+++ b/style.css
@@ -29,6 +29,9 @@
     padding: 15px;
     margin-bottom: 30px;
     text-align: center;
+  overflow-x: auto;
+  white-space: nowrap;
+
   }
   
   nav ul {
