--- a/style.css
+++ b/style.css
@@ -103,23 +103,7 @@
     font-size: 0.9rem;
     color: #777;
   }
-  .back-button {
-    display: inline-block;
-    margin: 20px;
-    padding: 10px 20px;
-    background-color: #f2f2f2;
-    color: #333;
-    text-decoration: none;
-    font-weight: 500;
-    border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0,0,0,0.06);
-    transition: background-color 0.3s ease, transform 0.2s ease;
-}
 
-.back-button:hover {
-    background-color: #e0e0e0;
-    transform: translateY(-2px);
-}
 .contact-section {
   max-width: 700px;
   margin: 60px auto;
@@ -315,4 +299,33 @@ h2 {
     padding: 30px 20px;
 
 }
+}
+.faq-section {
+  max-width: 600px;
+  margin: auto;
+  padding: 20px;
+  font-family: garamond;
+}
+
+.faq-question {
+  cursor: pointer;
+  font-weight: 100;
+  background-color: #f1f1f1;
+  margin: 10px 0;
+  padding: 15px;
+  border-radius: 5px;
+  transition: background-color 0.3s;
+}
+
+.faq-question:hover {
+  background-color: #e0e0e0;
+}
+
+.faq-answer {
+  display: none;
+  padding: 10px 15px;
+  background-color: #fafafa;
+  border-left: 4px solid #9daab3;
+  margin-bottom: 10px;
+  border-radius: 0 0 5px 5px;
 }
