--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ body {
 nav {
   background-color:#ffffff;
   border-radius: 12px;
-  border-bottom: 1px solid #ddd;
+  border-bottom: 1px solid #dddddd;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.05);
   padding: 15px;
   margin-bottom: 30px;
