--- a/style.css
+++ b/style.css
@@ -4,14 +4,19 @@
   padding: 0;
   box-sizing: border-box;
 }
-
-body {
-  font-family: Garamond;
-  background-color: #f8f8f8;
-  color: #333;
-  padding: 20px;
+div h1 {
+text-align: center;
+font-size: 2.5em;
+color: #333;
+margin-bottom: 20px;
 }
-
+body {
+font-family:  garamond;
+font-size: 20px;
+background: #f5f5f5;
+margin: 0;
+padding: 40px;
+}
 .logo {
   position: relative;
   right: 40%;
@@ -24,7 +29,7 @@ body {
 nav {
   background-color:#ffffff;
   border-radius: 12px;
-  border-bottom: 1px solid #dddddd;
+  border-bottom: 1px solid #ddd;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.05);
   padding: 15px;
   margin-bottom: 30px;
@@ -39,21 +44,12 @@ width: 100%;
 
 .nav-scroll ul {
 display: inline-flex;   
-padding: 0;
 margin: 0;
 list-style: none;
 }
 
-.nav-scroll li {
-padding: 10px 20px;
-flex: 0 0 auto;         
-}
-
 
 nav ul {
-  font-size:5px;
-  list-style: none;
-  display: flex;
   justify-content: center;
   gap: 20px;
 }
@@ -70,7 +66,6 @@ nav ul li a:hover {
   color: #ceaf62;
 }
 
-/* Main content */
 main {
   padding: 40px 20px;
   background-color: white;
@@ -95,7 +90,6 @@ main h1 {
 main p,.project-list {
   font-size: 1.2rem;
   margin-bottom: 10px;
-  transform: 0.4s;
 }
 
 /* Footer styling */
@@ -173,12 +167,6 @@ button:hover {
 background-color: #0566c5;
 }
 
-/* Mobile Responsive */
-@media (max-width: 600px) {
-.contact-section {
-  padding: 30px 20px;
-}
-}
 .projects {
 text-align: center;
 margin-top: 20px;
@@ -204,7 +192,7 @@ margin: 50px auto;
 background: #ffffff;
 padding: 40px;
 border-radius: 15px;
-box-shadow: 0 10px 25px rgba(0, 0, 0, 0.1);
+box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
 }
 
 .events-section {
@@ -240,26 +228,9 @@ transition: transform 0.2s ease;
 .event-list li:hover {
 transform: translateY(-3px);
 background-color: #f0eeee;
-}
-
-.event-title {
-font-weight: 700;
-color: #333;
-}
+} 
 /* About Section Styling */
-div h1 {
-text-align: center;
-font-size: 2.5em;
-color: #333;
-margin-bottom: 20px;
-}
-body {
-font-family:  garamond;
-font-size: 20px;
-background: #f5f5f5;
-margin: 0;
-padding: 40px;
-}
+
 
 .container {
 max-width: 1100px;
@@ -268,15 +239,7 @@ background: #fff;
 border-radius: 15px;
 
 }
-.content {
-margin-top: 10px;
-color: #444;
-font-size: 1em;
-}
 
-.content ul {
-padding-left: 20px;
-}
 .section {
 margin-bottom: 20px;
 border-radius: 10px;
@@ -294,6 +257,15 @@ color: #1a1a1a;
 font-size: 1.6em;
 }
 
+.content {
+margin-top: 10px;
+color: #444;
+font-size: 1em;
+}
+
+.content ul {
+padding-left: 20px;
+}
 @media (max-width: 600px) {
 .about-section {
   padding: 30px 20px;
@@ -304,7 +276,6 @@ font-size: 1.6em;
 max-width: 900px;
 margin: auto;
 padding: 20px;
-font-family: garamond;
 }
 
 .faq-question {
